# haptk

./: .gitignore  CHANGELOG.md  Cargo.lock-old  Cargo.toml  README.md  environment.yml  run_test_coverage.sh  tutorial.md
.cargo/: config.toml
haptk/: Cargo.toml  README.md
haptk-cli/: Cargo.toml  README.md
haptk-core/: Cargo.toml
haptk-core/src/: bam.rs  cigar_iterator.rs  error.rs  io.rs  lib.rs  phased_matrix.rs  ploidy.rs  read_phased_matrix.rs  smith_waterman.rs  utils.rs  variant.rs  vcf.rs
haptk-core/src/bam/: header.rs  reader.rs  writer.rs
haptk-core/src/vcf/: header.rs
haptk-gui/: Cargo.toml  README.md
haptk-gui/src/: main.rs
haptk-gwas/: Cargo.toml
haptk-gwas/src/: alignment.rs  app.rs  central_panel.rs  main.rs  plot.rs  side_panel.rs  tree.rs  utils.rs
haptk-tree/: Cargo.toml  README.md
haptk-tree/src/: app.rs  central_panel.rs  main.rs  plot.rs  side_panel.rs  tree.rs  utils.rs
haptk/src/: bin.rs  core.rs  lib.rs  matrix_graph.rs  subcommands.rs  traits.rs
haptk/src/core/: args.rs  cigar_iterator.rs  clap.rs  error.rs  io.rs  phased_matrix.rs  read_vcf.rs  structs.rs  utils.rs
haptk/src/graphs/: hst_graph.rs  matrix_graph.rs  mod.rs
haptk/src/libs/: args.rs  clap.rs  core.rs  error.rs  io.rs  mod.rs  read_vcf.rs  read_vcf_hst.rs  stats.rs  structs.rs  structs_hst.rs  utils.rs
haptk/src/subcommands/: annotate_haplotype.rs  bhst.rs  bhst_bb.rs  bhst_shard.rs  check_for_haplotype.rs  compare_haplotypes.rs  compare_to_haplotype.rs  compare_to_hst.rs  coverage.rs  fasta_to_haplotype.rs  haplotag.rs  haplotype_to_vcf.rs  hst.rs  hst_gwas.rs  hst_mrca_gwas.rs  hst_qt_gwas.rs  hst_scan.rs  hst_segregation.rs  immutable_hst.rs  list_haplotypes.rs  list_markers.rs  list_samples.rs  mod.rs  mrca.rs  mrca_scan.rs  mrca_shard.rs  read_sample_haplotype.rs  read_sample_names.rs  uhst.rs  uhst_shard.rs
haptk/tests/: core_tests.rs  io_tests.rs  test_annotate_haplotype.rs  test_bhst.rs  test_check_for_haplotype.rs  test_compare_haplotypes.rs  test_compare_hst.rs  test_compare_to_haplotype.rs  test_coverage.rs  test_fasta_to_haplotype.rs  test_haplotype_to_vcf.rs  test_list_haplotypes.rs  test_list_samples.rs  test_listing.rs  test_match_bhst.rs  test_mrca.rs  test_read_sample_haplotype.rs  test_read_sample_names.rs  test_uhst.rs
haptk/tests/common/: mod.rs
haptk/tests/data/: 1k_genomes_test.vcf.gz.tbi  clinical_data.csv  intron_fasta.csv  intron_haplotypes.csv  recombination_rates.tsv  recombination_rates_with_header.tsv  samples.fam  samples.ids  samples_for_testing.ids  test.gtf  test.vcf.gz.tbi  test_bhst_core_ht.vcf  test_bhst_core_ht.vcf.gz.tbi  test_contrahomozygote.vcf  test_contrahomozygote.vcf.gz.tbi  test_haplotype.csv  test_haplotype_unsorted.csv  test_match.vcf  test_match.vcf.gz.tbi  test_missing.vcf  test_missing.vcf.gz.tbi  test_not_normalized.vcf  test_not_normalized.vcf.gz.tbi  test_sharded.vcf  test_sharded.vcf.gz.csi  unc13a_exons.fa  unc13a_exons.fa.fai
haptk/tests/results/: SAMPLE1_haplotype_1.csv  SAMPLE1_haplotype_2.csv  TEST_haplotype.vcf  annotated_haplotype.csv  bhst.dot  bhst_mbah_segments.csv  bhst_mbah_segments_only_alts.csv  bhst_mbah_segments_only_longest.csv  bhst_mbah_segments_only_refs.csv  bhst_only_alts.dot  bhst_only_longest.dot  bhst_only_refs.dot  bhst_shared_core_haplotype.csv  bhst_shared_core_haplotype_only_longest.csv  bhst_shared_core_haplotype_only_refs.csv  bhst_vars.csv  bhst_vars_only_refs.csv  haplotype_check.csv  haplotype_check_only_alts.csv  haplotype_check_only_longest.csv  haplotype_check_only_refs.csv  ht_comparison.csv  ht_shared_segments.csv  ht_shared_segments_only_alts.csv  ht_shared_segments_only_longest.csv  ht_shared_segments_only_refs.csv  mrca_gamma_method.txt  mrca_gamma_method_only_longest.txt  test.dot  test_core_bhst.dot  test_core_bhst_mbah_segments.csv  uhst_left.dot  uhst_left_only_alts.dot  uhst_left_only_longest.dot  uhst_left_only_refs.dot  uhst_mbah_only_longest.csv  uhst_mbah_only_refs.csv  uhst_mbah_segments.csv  uhst_mbah_segments_only_alts.csv  uhst_mbah_segments_only_longest.csv  (+7 more)
haptk/tests/snapshots/: integration_tests__subcommands__check_for_haplotype_all.snap  integration_tests__subcommands__check_for_haplotype_only_longest.snap  integration_tests__subcommands__check_for_haplotype_only_refs.snap  integration_tests__subcommands__compare_haplotypes.snap  integration_tests__subcommands__local_rwc_unphased.snap  integration_tests__subcommands__mbah.snap  integration_tests__subcommands__mrca.snap  integration_tests__subcommands__mrca_scan_only_longest_mark_centromere.snap  integration_tests__subcommands__recursive_mbah.snap  integration_tests__subcommands__recursive_mbah_all.snap  integration_tests__subcommands__ref_ht_comparison_all.snap  integration_tests__subcommands__ref_ht_comparison_only_alts.snap  integration_tests__subcommands__ref_ht_comparison_only_longest.snap  integration_tests__subcommands__ref_ht_comparison_only_refs.snap  integration_tests__subcommands__rwc.snap  integration_tests__subcommands__sampled_rwc.snap  integration_tests__subcommands__shared_haplotype.snap  integration_tests__subcommands__shared_haplotype_unphased.snap  test_annotate_haplotype__annotate_haplotype.snap  test_bhst__test_bhst__bhst_all-2.snap  test_bhst__test_bhst__bhst_all-3.snap  test_bhst__test_bhst__bhst_all.snap  test_bhst__test_bhst__bhst_core_ht.snap  test_bhst__test_bhst__bhst_only_alt-2.snap  test_bhst__test_bhst__bhst_only_alt-3.snap  test_bhst__test_bhst__bhst_only_alt.snap  test_bhst__test_bhst__bhst_only_longest-2.snap  test_bhst__test_bhst__bhst_only_longest-3.snap  test_bhst__test_bhst__bhst_only_longest.snap  test_bhst__test_bhst__bhst_only_ref-2.snap  (+52 more)
py-haptk/: Makefile  pyproject.toml  setup.py
py-haptk/haptk/: __init__.py  circle_tree.py  graph.py  index_tree.py  iterate_tree.py  leaf_neighbors.py  leaf_nodes.py  lib.py  match_tree.py  normal_tree.py  utils.py
py-haptk/haptk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py-haptk/tests/: assert_equal_hst.py  test-graphs.py  test-leaf-neighbors.py  test_graphs.py  test_leaf_node_methods.py
(+178 files in other folders)
