[package]
name = "haptk-cli"
version = "1.0.0"
authors = ["xosxos"]
edition = "2021"
description = "Haplotype analysis toolkit CLI"
license = "GPL v3"

[[bin]]
name = "haptk"
path = "src/main.rs"

[dependencies]
haptk = { path = "../haptk", features = ["clap"] }
color-eyre = "*"
clap = { version = "4.1", features = ["derive"] }
