[package]
name = "haptk-cli"
version = "0.1.0"
authors = ["Osma S. Rautila"]
edition = "2021"
description = "HAPTK CLI - Haplotype analysis toolkit CLI"
license = "GPL v3"
readme = "README.md"
homepage = "https://github.com/xosxos/haptk"

[[bin]]
name = "haptk"
path = "src/main.rs"

[dependencies]
haptk = { path = "../haptk", features = ["clap"] }
color-eyre = "*"
clap = { version = "4.1", features = ["derive"] }
