[package]
name = "haptk-tree"
version = "0.1.0"
authors = ["Osma S. Rautila"]
edition = "2021"
description = "HAPTK Tree Viewer"
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/xosxos/haptk"

[dependencies]
haptk = { version = "0.2", path = "../haptk", features = ["clap"] }
clap = { version = "=4.5.7", features = ["derive"] }
eframe = { version = "0.23.0" }
egui = { version = "0.23.0" }
egui_file = { version = "0.8" }
egui_plot = { version = "0.23" }
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.7"
ndarray = "0.15"
petgraph = "0.6"
itertools = "0.11"
color-eyre = "0.6.2"
fishers_exact = "1.0"

