[package]
name        = "haptk"
version     = "0.3.2"
authors     = ["Osma S. Rautila"]
edition     = "2021"
description = "HAPTK - Haplotype analysis toolkit"
license     = "GPL-3.0-only"
readme      = "README.md"
homepage    = "https://github.com/xosxos/haptk"
repository  = "https://github.com/xosxos/haptk"

include = [
    "src/**/*.rs",
    "../LICENSE",
    "../README.md",
    "../CHANGELOG.md",
    "Cargo.toml",
    "Cargo.lock",
]

[lib]
crate-type = ["cdylib", "rlib"]
path       = "src/lib.rs"
doctest    = false

[[bin]]
name    = "haptk"
test    = true
bench   = false
doctest = false
path    = "src/bin.rs"

[features]
default      = ["clap"]
no-clap      = []
clap         = ["dep:clap", "dep:anstyle"]
enum_methods = ["dep:strum"]
haplotag = ["dep:num-traits", "dep:gxhash", "dep:crossbeam-channel", "dep:regex"]
experimental = ["clap", "dep:fishers_exact", "dep:polars", "dep:serde_with", "haplotag"]

[dependencies]
alphanumeric-sort = "1.5"
bgzip = "0.3"
bio = "2.0"
niffler = "3.0"
ndarray = { version = "0.16", features = ["rayon", "blas", "serde"] }
ndarray-npy = { version = "0.9", default-features = false }
termion = "4.0"
color-eyre = "0.6"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
svg = "0.13"
csv = "1.3"
itertools = "0.13"
serde_json = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
thiserror = "2.0.17"
indexmap = {version = "2.6", features = ["serde"]}
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "time", "ansi"] }
time = { version = "0.3", default-features = false, features = ["local-offset"] }
petgraph = { version = "0.6", default-features = false, features = ["serde-1"] }
rust-htslib = { version = "0.44", default-features = false, features = ['bzip2'] }
image = { version = "0.25", default-features = false, features = ['png'] }
statrs = { version = "0.16", default-features = false }
chrono = { version = "0.4.38" }

# Cli
clap = { version = "=4.4.18", optional = true, features = ["derive"] }
anstyle = { version = "1.0.7", optional = true }

# Genome-wide
fishers_exact = { version="1.0.1", optional = true }
polars = { version = "=0.33.2", optional = true,  default-features = false, features = ["lazy", "is_in", "csv", "fmt", "serde"]}
serde_with = { version = "3.11", optional = true }

# Enum methods for GUI
strum = { version = "0.26.3", features = ["derive"], optional = true } 

# Haplotag
num-traits = {version = "0.2", optional = true }
gxhash = { version = "3.4.1", optional = true }
crossbeam-channel = { version = "0.5.13", optional = true }
regex = { version = "1.11", optional = true }
noodles = { path = "../../noodles/noodles", features = ["cram", "sam", "bam", "fasta", "core"], optional = true}

[dev-dependencies]
insta = { version = "1.26.0", default-features = false, features = ["yaml"] }



