[project]
name = "haptk"
version = "0.0.1"
authors = [
  { name="xosxos", email="author@example.com" },
]
description = "HAPTK"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'ete3 == 3.1.3',
  'rustworkx == 0.14.2',
  'pyqt5 == 5.15.10',
]

[project.urls]
Homepage = "https://github.com/xosxos/haptk"
Issues = "https://github.com/xosxos/haptk/issues"
