[project]
name = "haptk"
version = "0.0.7"
authors = [
  { name="Osma S. Rautila", email="author@example.com" },
]
description = "HAPTK"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'ete3 == 3.1.3',
  'rustworkx == 0.14.2',
  'pyqt5 == 5.15.10',
  'PyQt5-Qt5==5.15.14',
  'PyQt5-sip==12.13.0',
  'six == 1.16.0',
  'scipy == 1.14.0',
  'matplotlib == 3.9.0',
  'numpy == 1.26.4',
]

[project.urls]
Homepage = "https://github.com/xosxos/haptk"
Issues = "https://github.com/xosxos/haptk/issues"
