[project]
name = "haptk"
version = "0.0.9"
authors = [
  { name="Osma S. Rautila", email="author@example.com" },
]
description = "HAPTK"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'ete3 == 3.1.3',
  'rustworkx == 0.14.2',
  'pyqt5 == 5.15.10',
  'scipy == 1.14.1',
  'matplotlib >= 3.8.4',
  'numpy >= 1.24.4',
]

[project.urls]
Homepage = "https://github.com/xosxos/haptk"
Issues = "https://github.com/xosxos/haptk/issues"
